@@ -208,7 +208,8 @@ menu_maps_selection_rect=Rectangle
 menu_maps_selection_polygon=Polygon
 menu_maps_selection_circle=Circle
 menu_maps_selection_add=Add selection
-menu_maps_selection_add_by_gpx=Add selection around GPX track
+menu_maps_selection_add_around_gpx=Add selection around GPX track
+menu_maps_selection_add_by_gpx=Add selection by GPX track
 #Bookmark
 menu_bookmark=Bookmarks
 menu_bookmark_save=Save current view
